node-load-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: node-load
  name: node-service
  selfLink: /api/v1/namespaces/default/services/node-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31001
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: node-load
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
